# bump2version

./: .bumpversion.toml  .gitignore  Cargo.toml  flake.nix
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
