[package]
name = "bump2version"
version = "1.0.2"
edition = "2021"
description = "⬆️ Easily manage version numbers in your projects."
license = "MIT"
keywords = ["cli", "parser"]
categories = ["command-line-utilities"]
repository = "https://github.com/wiseaidev/bump2version"
documentation = "https://docs.rs/bump2version"
authors = [
  "Mahmoud Harmouch <oss@wiseai.dev>",
  "TECHNOFAB <admin@technofab.de>",
]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde = "1.0.216"
serde_derive = "1.0.216"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
